# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  items.py
app/api/v1/schemas/: items.py
app/core/: config.py  dependencies.py  exception_handlers.py  exceptions.py  lifespan.py  logging.py
app/middleware/: timing.py
app/services/: items.py
tests/: conftest.py
tests/api/v1/: test_health.py  test_items.py
